# RGA-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: architect.md  backend-engineer.md  data-engineer.md  devops-engineer.md  financial-analyst.md  frontend-engineer.md  google-places-specialist.md  llm-guardrails-reviewer.md  test-engineer.md
.claude/rules/: architecture.md  backend.md  data.md  docker.md  frontend.md  google-places.md  llm-guardrails.md  security.md  testing.md
backend/: .gitignore  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py  alerts.py  coverage.py  margins.py  menu_engineering.py  scope.py  sensitivity.py
backend/app/api/routes/: health.py  upload.py
backend/app/core/: config.py  errors.py
backend/app/parsers/: data_parser.py
backend/app/schemas/: parser.py
backend/rga_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_analytics_alerts.py  test_analytics_coverage.py  test_analytics_margins.py  test_analytics_menu_engineering.py  test_analytics_scope.py  test_analytics_sensitivity.py  test_data_parser.py  test_health.py
backend/tests/fixtures/: analytics_sample.csv  bad_money.csv  bad_ratio.csv  missing_required_columns.csv  needs_cleaning.csv  valid.csv  with_total_zero.csv
docs/: ANTI_HALLUCINATION.md  API_SPEC.md  ARCHITECTURE.md  DATA_CONTRACTS.md  DECISIONS.md  DEPLOYMENT.md  GOOGLE_PLACES_STRATEGY.md  PRODUCT_SPEC.md  TASKS.md  TESTING.md  UI_SPEC.md
(+7 files in other folders)
