[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rga-backend"
version = "0.0.1"
description = "RGA Financial Copilot — backend (Phase 1: skeleton + parser)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF"]
ignore = [
  "E501",  # line length handled by formatter; keep noise low
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"tests/conftest.py" = ["E402"]  # sys.path manipulation precedes app imports by design

[tool.mypy]
python_version = "3.12"
files = ["app"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
